tests/ui/diagnostic_namespace/on_unknown_item/malformed_attribute.stderr
error[E0432]: Foo
  --> $DIR/malformed_attribute.rs:15:5
   |
LL | use std::str::NotExisting;
   |     ^^^^^^^^^^^^^^^^^^^^^ no `NotExisting` in `str`

warning: malformed `#[diagnostic::on_unknown_item]` attribute
  --> $DIR/malformed_attribute.rs:1:1
   |
LL | #[diagnostic::on_unknown_item]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the `#[diagnostic::on_unknown_item]` attribute expects at least one option
   |
   = help: at least one of the following options is required: `message`, `label` or `note`
   = note: `#[warn(unknown_or_malformed_diagnostic_attributes)]` on by default

warning: unknown `foo` option for `#[diagnostic::on_unknown_item]` attribute
  --> $DIR/malformed_attribute.rs:5:31
   |
LL | #[diagnostic::on_unknown_item(foo = "bar", message = "foo")]
   |                               ^^^^^^^^^^^ invalid option found here
   |
   = help: only `message`, `note` and `label` are allowed as options

warning: `label` is ignored due to previous definition of `label`
  --> $DIR/malformed_attribute.rs:9:46
   |
LL | #[diagnostic::on_unknown_item(label = "foo", label = "bar")]
   |                               -------------  ^^^^^^^^^^^^^ `label` is already declared here
   |                               |
   |                               `label` is first declared here
   |
   = help: consider removing the second `label` as it is ignored anyway

warning: `message` is ignored due to previous definition of `message`
  --> $DIR/malformed_attribute.rs:13:48
   |
LL | #[diagnostic::on_unknown_item(message = "Foo", message = "Bar")]
   |                               ---------------  ^^^^^^^^^^^^^^^ `message` is already declared here
   |                               |
   |                               `message` is first declared here
   |
   = help: consider removing the second `message` as it is ignored anyway

error: aborting due to 1 previous error; 4 warnings emitted

For more information about this error, try `rustc --explain E0432`.
